スマホサイズ表示時に画面トップまで戻るボタンを作成

--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
             </tr>
           </table>
         </div>
+        <div id="page-top">
+          <a href="#"></a>
+        </div>
         <div class="card-footer">
           <small class="text-muted">この和牛の詳細を見る</small>
         </div>
